# predictive-maintenance-copilot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.hf  Dockerfile.hf.bak  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  test_pipeline.py
.github/workflows/: ci.yml
data/: ragas_golden.json
notebooks/: 01_eda_cmapss.ipynb
reports/: ragas_results.json  score_drift.html
scripts/: download_data.sh  evaluate.py  evaluate_rag.py  monitor.py  start.sh  train.py
src/: __init__.py  config.py  pipeline.py
src/api/: main.py
src/data/: __init__.py  loaders.py  preprocessing.py
src/llm/: __init__.py  client.py  groq_backend.py  huggingface.py  ollama.py  openai_backend.py
src/models/: __init__.py  autoencoder.py
src/rag/: __init__.py  ingestion.py  prompts.py  retriever.py
src/ui/: streamlit_app.py
tests/: conftest.py  test_api.py  test_data.py  test_llm.py  test_loaders.py  test_models.py  test_pipeline.py  test_preprocessing.py  test_retriever.py
