[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictive-maintenance-copilot"
version = "0.1.0"
description = "End-to-end anomaly detection + RAG explanation pipeline for industrial sensor data"
authors = [{ name = "Gabriele Formis", email = "gabriele.formis.95@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core ML
    "torch>=2.3.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",

    # RAG / LLM
    "llama-index>=0.11.0",
    "llama-index-vector-stores-chroma>=0.2.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.44.0",
    "pypdf>=5.0.0",

    # Serving
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "streamlit>=1.38.0",

    # MLOps
    "mlflow>=2.16.0",
    "evidently>=0.4.30",
    "ragas>=0.4.0",
    "langchain-groq>=0.2.0",
    "datasets>=3.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.9.0",
]

[project.scripts]
pmc-train = "src.pipeline:train_cli"
pmc-ingest = "src.rag.ingestion:ingest_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"
